<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_popup_bg"
    android:padding="20dp">

    <TextView
        android:id="@+id/game_start_dialog_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textColor="@color/white"
        android:text="Select mode:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/game_mode_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_start_dialog_head">

        <RadioButton
            android:id="@+id/classic_mode_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?android:selectableItemBackground"
            android:button="@null"
            android:textColor="@color/white"
            android:drawableRight="?android:attr/listChoiceIndicatorSingle"
            android:fontFamily="@font/audiowide"
            android:layoutDirection="rtl"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:theme="@style/RadioStyle"
            android:text="@string/classic_mode_ui"
            android:textAlignment="textStart" />

        <RadioButton
            android:id="@+id/survival_mode_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?android:selectableItemBackground"
            android:button="@null"
            android:textColor="@color/white"
            android:drawableRight="?android:attr/listChoiceIndicatorSingle"
            android:fontFamily="@font/audiowide"
            android:layoutDirection="rtl"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/survival_mode_ui"
            android:theme="@style/RadioStyle"
            android:textAlignment="textStart" />

        <RadioButton
            android:id="@+id/hi_lo_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?android:selectableItemBackground"
            android:button="@null"
            android:textColor="@color/white"
            android:drawableRight="?android:attr/listChoiceIndicatorSingle"
            android:fontFamily="@font/audiowide"
            android:layoutDirection="rtl"
            android:paddingBottom="10dp"
            android:visibility="gone"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/hi_lo_mode_ui"
            android:theme="@style/RadioStyle"
            android:textAlignment="textStart" />

    </RadioGroup>

    <Button
        android:id="@+id/start_play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/play_btn_bg"
        android:text="Play"
        android:textColor="#2B2B2B"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial_checkbox" />

<!--    <ImageView-->
<!--        android:id="@+id/rule_image_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/first_rule_view" />-->

    <TextView
        android:id="@+id/second_rule_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_mode_radio_group" />

    <TextView
        android:id="@+id/how_to_play_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How to play?"
        android:textSize="20sp"
        android:layout_marginTop="15sp"
        android:textColor="#CFAA01"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_rule_view"/>

    <TextView
        android:id="@+id/first_rule_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_rule_text"
        android:textAlignment="center"
        android:textColor="#CFAA01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/how_to_play_head"/>

    <CheckBox
        android:id="@+id/tutorial_checkbox"
        android:text="Show tutorial"
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TutorialCheckbox"
        android:theme="@style/tutorial_checkbox_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_rule_view"/>
</androidx.constraintlayout.widget.ConstraintLayout>