<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlayScreen"
    android:background="@drawable/carbon_bg">

    <LinearLayout
        android:id="@+id/lifes_images_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp">

        <ImageView
            android:id="@+id/life_image_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/life_image" />

        <ImageView
            android:id="@+id/life_image_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/life_image" />

        <ImageView
            android:id="@+id/life_image_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/life_image" />
    </LinearLayout>

    <Button
        android:id="@+id/kick_it"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/kick_drum_bg"
        android:onClick="kick_it_tapped"
        app:layout_constraintBottom_toTopOf="@+id/bass_drum_text_view"
        app:layout_constraintEnd_toStartOf="@+id/snare_it"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/snare_it"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/snare_drum_bg"
        android:onClick="snare_it_tapped"
        app:layout_constraintBottom_toTopOf="@+id/snare_drum_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/crash_it"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/crash_cymbal_bg"
        android:onClick="crash_it_tapped"
        app:layout_constraintBottom_toTopOf="@+id/crash_cymbal_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/snare_it" />

    <TextView
        android:id="@+id/eng_selected_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="fsdfioj"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/timer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:textColor="#CFAA01"
        android:visibility="visible"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/audiowide"
        app:layout_constraintTop_toBottomOf="@+id/lifes_images_cont" />

    <TextView
        android:id="@+id/score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Beats: 0"
        android:visibility="visible"
        android:textColor="#F0E995"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginBottom="20sp"
        app:layout_constraintBottom_toTopOf="@+id/powerups_cont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/powerups_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/snare_it"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp">

        <Button
            android:id="@+id/slow_down_button"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:onClick="slow_down_tapped"
            android:layout_weight="1"
            android:text="Slow Down"/>

        <Button
            android:id="@+id/double_multiplier_button"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:onClick="slow_down_tapped"
            android:layout_weight="1"
            android:text="2x"/>

        <Button
            android:id="@+id/freeze_btn"
            android:layout_width="50sp"
            android:padding="10sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Freeze"/>
    </LinearLayout>

    <TextView
        android:id="@+id/bass_drum_text_view"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/kick_it"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/snare_drum_text_view"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/snare_drum_text_view"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/snare_it"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/crash_cymbal_text_view"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/crash_it"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/snare_drum_text_view" />

    <Button
        android:id="@+id/pause_game_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pause_game_vector"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:onClick="pause_tapped"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>